--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,14 @@
 # production
 /build
 
+/.firebase
+/.firebaserc
+.firebaserc
+firebase.json
+.firebase.json
+/firebase.json
+
+
 # misc
 .DS_Store
 .env.local
